--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "tasq-japan-mvp",
-  "version": "0.1.0",
+  "name": "mvp-for-tasq-japan",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "axios": "^1.6.8",
+    "nodemailer": "^6.9.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3"
   }
 }
