--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "axios": "^1.6.8",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "@vercel/og": "^0.6.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
